--- a/src/Components/SearchSpacesInput/SearchSpacesInput.css
+++ b/src/Components/SearchSpacesInput/SearchSpacesInput.css
@@ -110,6 +110,7 @@
     #search-spaces-input{
         display: inline-block;
         width: 100%;
+        height: 2.5em;
         font-size: 1em;
         padding: 0 0 0 2em;
         border: none;
@@ -117,6 +118,7 @@
     
     #input-container button{
         width: 4em;
+        height: 2.5em;
         font-size: 1em;
         position: absolute;
         right: 0;
